#   dmbcs-kraken-api-rust  Kraken API client library in Rust
#   Copyright (C) 2022  Dale Mellor
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program: it is in a file called LICENSE.txt.  If not,
#   see <https://www.gnu.org/licenses/>.


[package]
name = "DMBCS-KRAKEN-API"
version = "0.1.1"
authors = ["Dale Mellor <black-hole@rdmp.org>"]
edition = "2018"

[dependencies]
curl = "0.4.43"
openssl = "0.10.40"

[dev-dependencies]
serde_json = "1.0.81"

[lib]
name = "DMBCS_KRAKEN_API"
path = "src/kraken_api.rs"